Kubernetes: основы, применение и администрирование /Конфигурация приложений/file/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-cfg
              mountPath: /usr/share/nginx/html/
      volumes:
        - name: nginx-cfg
          configMap:
            name: nginx-cfg
