Kubernetes: основы, применение и администрирование /Конфигурация приложений/file/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 9001
      name: nginx
      targetPort: 80
