Kubernetes: основы, применение и администрирование /Конфигурация приложений/file/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-nginx-svc
spec:
  selector:
    app: multitool-nginx
  ports:
    - port: 9001
      name: nginx
      targetPort: 80
    - port: 9002
      name: multitool
      targetPort: 8080
