Kubernetes: основы, применение и администрирование /Конфигурация приложений/file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dasha-test.ru
      secretName: netology-secret
  rules:
    - host: dasha-test.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: nginx
